<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:shortcutId="dump" android:shortcutShortLabel="@string/shortcut_dump" android:icon="@mipmap/ic_launcher">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="app.nextstep" android:targetClass="app.nextstep.MainActivity">
            <extra android:name="hash" android:value="dump" />
        </intent>
    </shortcut>
    <shortcut android:shortcutId="focus" android:shortcutShortLabel="@string/shortcut_focus" android:icon="@mipmap/ic_launcher">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="app.nextstep" android:targetClass="app.nextstep.MainActivity">
            <extra android:name="hash" android:value="focus" />
        </intent>
    </shortcut>
    <shortcut android:shortcutId="checkin" android:shortcutShortLabel="@string/shortcut_checkin" android:icon="@mipmap/ic_launcher">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="app.nextstep" android:targetClass="app.nextstep.MainActivity">
            <extra android:name="hash" android:value="checkin" />
        </intent>
    </shortcut>
</shortcuts>
